Name: rungekutta
Version: 1.0.3
Author: Uwe Hollerbach <uh@alumni.caltech.edu>
Maintainer: Marco Zocca (ocramz)
Category: Numeric
Synopsis: A collection of explicit Runge-Kutta methods of various orders
Description: This package contains a collection of explicit Runge-Kutta
             methods of various orders, some with fixed-size steps (no
             error estimate) and some intended for adaptive stepsize
             (ie, they include an error estimate). There are a couple of
             test programs which include some adaptive stepsize control,
             however there is not yet any such routine in the library
             itself.

cabal-version: >= 1.8
Build-Type: Simple
License: BSD3
License-File: LICENSE

Library
 Build-Depends: base < 5
 Exposed-Modules: Numeric.RungeKutta

executable testrk
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             TestRK.hs
  build-depends:       base
                     , rungekutta

executable arenstorf
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Arenstorf.hs
  build-depends:       base
                     , rungekutta

executable volterra
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Volterra.hs
  build-depends:       base
                     , rungekutta

executable volterra2
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Volterra2.hs
  build-depends:       base
                     , rungekutta